--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.jenus</groupId>
     <artifactId>fingerprintanalysis</artifactId>
     <version>1.0</version>
-    <name>FingerprintManager</name>
+    <name>FingerprintAnalysis</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -92,7 +92,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.jenus.bmfs/com.jenus.bfpas.BFPASApplication</mainClass>
+                            <mainClass>com.jenus.bmfs/com.jenus.bfpas.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
@@ -117,7 +117,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.jenus.bfpas.BFPASApplication</mainClass>
+                                    <mainClass>com.jenus.bfpas.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
